# sprocket-boot

./: .gitmodules  Cargo.toml  README.md  memory.x
.cargo/: config.toml
crates/groundhog-stm32g031/: Cargo.toml
crates/groundhog-stm32g031/src/: lib.rs
src/: boot_machine.rs  consts.rs  lib.rs  log.rs  main.rs  page_map.rs
testsuite/: Cargo.toml
testsuite/tests/: test.rs
